# Universal-AnyConvert

./: LICENSE  README.md  SPEC.md  package-lock.json  package.json  test_conversion.sh
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: DropZone.tsx  ExtensionsPanel.tsx  FileCard.tsx  HistoryList.tsx  ProgressBar.tsx  Sidebar.tsx  TopBar.tsx
src/stores/: appStore.ts
src/types/: index.ts
