[package]
name = "universal-anyconvert"
version = "0.1.0"
description = "Universal file converter - convert images, documents, videos, audio, and more"
authors = ["AnyConvert Team"]
edition = "2021"

[lib]
name = "universal_anyconvert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "io-util"] }
log = "0.4"
env_logger = "0.11"
mime_guess = "2"
